--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <li class="navigation__item"><a href="#section-features" class="navigation__link"><span>02</span>what i do</a></li>
                     <li class="navigation__item"><a href="#section-tours" class="navigation__link"><span>03</span>web dev</a></li>
                     <li class="navigation__item"><a href="#branding" class="navigation__link"><span>04</span>logos & branding</a></li>
-                    <li class="navigation__item"><a href="#form" class="navigation__link"><span>05</span>let's chat</a></li>
+                    <li class="navigation__item"><a href="alex_thornton_resume.pdf" target = "_blank" class="navigation__link"><span>05</span>resume</a></li>
+                    <li class="navigation__item"><a href="#form" class="navigation__link"><span>06</span>let's chat</a></li>
                 </ul>
             </nav>
         </div>
